# aead-crypt-r

./: Cargo.toml  readme.md
src/: lib.rs  main.rs
