[package]
name = "delete-all"
version = "0.1.0"
edition = "2021"
RUST_BACKTRACE=1
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
anyhow = "1.0"
rand = "0.8"
sha256 = "1.0.1"
arrayref = "0.3.6"
rpassword = "0.0.4"